RESOLVED FIXED70333
[Qt][WK2]: Shouldn't send unhandled TouchCancel event to gesture recognizers
https://bugs.webkit.org/show_bug.cgi?id=70333
Summary [Qt][WK2]: Shouldn't send unhandled TouchCancel event to gesture recognizers
Dinu Jacob
Reported 2011-10-18 09:37:52 PDT
QtPanGestureRecognizer and QtPinchGestureRecognizer needs only TouchBegin, TouchUpdate and TouchEnd. Sending TouchCancel event that is not handled results in an ASSERT in the gesture recognizers.
Attachments
patch (1.36 KB, patch)
2011-10-18 09:42 PDT, Dinu Jacob
hausmann: review+
Dinu Jacob
Comment 1 2011-10-18 09:38:56 PDT
In QTouchWebPageProxy::doneWithTouchEvent, the gesture recognizers should be reset even if TouchCancel event is not handled.
Dinu Jacob
Comment 2 2011-10-18 09:42:04 PDT
Simon Hausmann
Comment 3 2011-11-01 14:04:04 PDT
Comment on attachment 111455 [details] patch Fair enough :) How do you synthesize TouchCancel? As a result of window deactivation maybe?
Dinu Jacob
Comment 4 2011-11-02 05:48:12 PDT
(In reply to comment #3) > (From update of attachment 111455 [details]) > Fair enough :) > > How do you synthesize TouchCancel? As a result of window deactivation maybe? Yes, and according to W3C spec, also if there are more touch points on the touch surface than an allowed 'max'.
Dinu Jacob
Comment 5 2011-11-02 05:48:54 PDT
Can you also commit the patch please? Thanks, Dinu
Simon Hausmann
Comment 6 2011-11-02 05:56:24 PDT
Dinu Jacob
Comment 7 2011-11-02 05:57:03 PDT
(In reply to comment #6) > Committed r99054: <http://trac.webkit.org/changeset/99054> Thanks Simon.
Note You need to log in before you can comment on or make changes to this bug.