[Qt][WK2]: Shouldn't send unhandled TouchCancel event to gesture recognizers https://bugs.webkit.org/show_bug.cgi?id=70333

Patch by Dinu Jacob <dinu.jacob@nokia.com> on 2011-10-18
Reviewed by Simon Hausmann.

Gesture recognizers should be reset for unhandled TouchCancel event.

* UIProcess/qt/qtouchwebpageproxy.cpp:
(QTouchWebPageProxy::doneWithTouchEvent):

git-svn-id: svn://svn.chromium.org/blink/trunk@99054 bbb929c8-8fbe-4397-9dbb-9b2b20218538