third_party/WebKit/Source/WebKit2/UIProcess/qt/QtTouchWebPageProxy.cpp
@@ -65,7 +65,7 @@ void QtTouchWebPageProxy::renderToCurrentGLContext(const TransformationMatrix& t
 #if ENABLE(TOUCH_EVENTS)
 void QtTouchWebPageProxy::doneWithTouchEvent(const NativeWebTouchEvent& event, bool wasEventHandled)
 {
-    if (wasEventHandled) {
+    if (wasEventHandled || event.type() == WebEvent::TouchCancel) {
         m_panGestureRecognizer.reset();
         m_pinchGestureRecognizer.reset();
     } else {
